...
                android:scaleType="centerInside"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/profileUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUserRellay"
            android:layout_centerHorizontal="true"
            android:text ="Nani Haha"
            android:height="50dp"
            android:textSize="32sp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"

            />
        <ImageView
            android:id="@+id/usernameEditButton"
            android:layout_below="@id/imgUserRellay"
            android:layout_width="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="0dp"
            android:layout_height="50dp"
            android:onClick="OnUserProfileEditUsernameButtonClick"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/userHeadings"
                        android:textSize="13sp"
                        android:text="Email"/>
                    <TextView
                        android:id="@+id/profileEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:fontFamily="sans-serif-light"
                        android:textSize="18sp"
                        android:text="nani@haha.com" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/profileEditEmailButton"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:layout_width="50dp"
                    android:onClick="OnUserProfileEditEmailButtonClick"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="0dp"
...
                        android:fontFamily="sans-serif-light"
                        android:textSize="18sp"
                        android:text="########" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/profileEditPasswordButton"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:layout_width="50dp"
                    android:onClick="OnUserProfileEditPasswordButtonClick"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="0dp"
...
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/EventsOrganiseButton"
                    android:layout_width="match_parent"
                    android:onClick="onEventsListClick"
                    android:text="Events I Organize"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/myGroupsButton"
                    android:layout_width="match_parent"
                    android:onClick="onMyGroupsButtonClick"
                    android:text="MyGroups"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">
                </Button>
...
