...
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleTv"
            android:text="Title"
            android:textSize="22sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_toEndOf="@id/imageIv"
            android:layout_marginStart="10dp"
...
